--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,195 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  margin-left: 20px;
+  width: 95%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 5vh;
+}
+.menu {
+  display: flex;
+  width: 100vw;
+
+  justify-content: flex-end;
+  align-items: center;
+
+  height: 5vh;
+}
+.logo {
+  font-size: 40px;
+}
+.item {
+  font-size: 30px;
+  margin-left: 50px;
+}
+.home {
+  background-color: cornflowerblue;
+  width: 100%;
+  height: 100vh;
+}
+#sky {
+  height: 100vh;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 15% 45%;
+  background-attachment: fixed;
+  position: relative;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+}
+.mountain_btm_right {
+  position: absolute;
+  width: 998px;
+  right: 0;
+  bottom: 0;
+  height: 400px;
+  background-image: url("./img/mountain.png");
+}
+.mountain_btm_mid {
+  position: absolute;
+  width: 998px;
+  left: 0;
+  right: 80px;
+  margin: 0 auto;
+  bottom: -80px;
+  height: 400px;
+  background-image: url("./img/mountain.png");
+}
+.mountain_btm_left {
+  position: absolute;
+  width: 998px;
+  left: 0;
+  bottom: 0;
+  height: 400px;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  background-image: url("./img/mountain.png");
+}
+section {
+  position: relative;
+  z-index: 5;
+  background-color: #131220;
+}
+
+.container {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.box {
+  max-width: 550px;
+  width: 100%;
+  height: 200px;
+  border: 2px solid #fff;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  margin: 0 15px;
+}
+.text {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.tx {
+  font-size: 40px;
+  letter-spacing: 1.5px;
+  color: black;
+  text-shadow: 5px 4px 10px rgb(56, 55, 55);
+}
+.txt {
+  color: white;
+  font-size: 40px;
+}
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 95%;
+  height: 80vh;
+  padding: 0 2rem;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.contact-section-header > h2 {
+  font-size: 6rem;
+}
+
+@media (max-width: 28.75em) {
+  .contact-section-header > h2 {
+    font-size: 4rem;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.contact-links {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 980px;
+  margin-top: 4rem;
+  flex-wrap: wrap;
+}
+
+.contact-details {
+  font-size: 40px;
+  text-shadow: 2px 2px 1px #1f1f1f;
+  transition: transform 0.3s ease-out;
+  cursor: pointer;
+}
+
+.contact-details:hover {
+  transform: translateY(8px);
+}
+.icon {
+  height: 30px;
+}
+.imgP {
+  height: 30vh;
+
+  border-radius: 30px;
+  cursor: pointer;
+}
+.projects {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: rgb(235, 228, 228);
+}
+.proj {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 2vh;
+}
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
