--- a/src/App.css
+++ b/src/App.css
@@ -10,17 +10,34 @@ body {
   align-items: center;
   height: 5vh;
 }
+
 .menu {
   display: flex;
   width: 100vw;
-
   justify-content: flex-end;
   align-items: center;
-
   height: 5vh;
 }
 .logo {
   font-size: 40px;
+  color: #1f1f1f;
+}
+.wrapper {
+  display: flex;
+  height: 90vh;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+}
+.static {
+  font-size: 60px;
+  font-weight: 900;
+}
+.dynamic {
+  margin-left: 20px;
+  color: #f11f1f;
+  font-size: 60px;
+  font-weight: 900;
 }
 .item {
   font-size: 30px;
@@ -31,59 +48,16 @@ body {
   width: 100%;
   height: 100vh;
 }
-#sky {
-  height: 100vh;
-
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 15% 45%;
-  background-attachment: fixed;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.mountain_btm_right {
-  position: absolute;
-  width: 998px;
-  right: 0;
-  bottom: 0;
-  height: 400px;
-  background-image: url("./img/mountain.png");
-}
-.mountain_btm_mid {
-  position: absolute;
-  width: 998px;
-  left: 0;
-  right: 80px;
-  margin: 0 auto;
-  bottom: -80px;
-  height: 400px;
-  background-image: url("./img/mountain.png");
-}
-.mountain_btm_left {
-  position: absolute;
-  width: 998px;
-  left: 0;
-  bottom: 0;
-  height: 400px;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  background-image: url("./img/mountain.png");
-}
-section {
-  position: relative;
-  z-index: 5;
-  background-color: #131220;
+.photo {
+  background-color: #f11f1f60;
+  border-radius: 45% 55% 70% 30% / 34% 34% 66% 66%;
 }
 
 .container {
   display: flex;
-  height: 100vh;
-  justify-content: center;
+  height: 90vh;
+  justify-content: space-around;
   align-items: center;
-  position: relative;
 }
 .box {
   max-width: 550px;
@@ -95,19 +69,7 @@ section {
   align-items: center;
   margin: 0 15px;
 }
-.text {
-  color: white;
-}
-.tx {
-  font-size: 40px;
-  letter-spacing: 1.5px;
-  color: black;
-  text-shadow: 5px 4px 10px rgb(56, 55, 55);
-}
-.txt {
-  color: white;
-  font-size: 40px;
-}
+
 .contact-section {
   display: flex;
   flex-direction: column;
@@ -120,20 +82,10 @@ section {
   background-color: white;
 }
 
-.contact-section-header > h2 {
-  font-size: 6rem;
-}
-
-@media (max-width: 28.75em) {
-  .contact-section-header > h2 {
-    font-size: 4rem;
-  }
-}
-
 .contact-links {
   display: flex;
-  justify-content: center;
-  width: 100%;
+  justify-content: space-around;
+  width: clamp(5vw, 10vw, 10vw);
   max-width: 980px;
   margin-top: 4rem;
   flex-wrap: wrap;
@@ -141,7 +93,7 @@ section {
 
 .contact-details {
   font-size: 40px;
-  text-shadow: 2px 2px 1px #1f1f1f;
+  text-shadow: 2px 2px 5px #1f1f1f;
   transition: transform 0.3s ease-out;
   cursor: pointer;
 }
@@ -150,7 +102,7 @@ section {
   transform: translateY(8px);
 }
 .icon {
-  height: 30px;
+  height: 50px;
 }
 .imgP {
   height: 30vh;
@@ -174,22 +126,49 @@ section {
   flex-direction: column;
   margin-right: 2vh;
 }
-a:link {
-  text-decoration: none;
-}
 
-a:visited {
+a,
+li {
+  list-style: none;
   text-decoration: none;
 }
-
-a:hover {
+.item {
+  list-style: none;
+  margin: 30px;
   text-decoration: none;
+  color: rgb(48, 46, 46);
+  font-weight: 300;
+  letter-spacing: 2px;
+  position: relative;
+  padding: 5px 0px;
+  cursor: pointer;
 }
-
-a:active {
-  text-decoration: none;
+.item::before,
+.item::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #f11f1f;
+  position: absolute;
+  left: 0;
+  transform: scaleX(0);
+  transition: transform 0.5s;
 }
-a {
-  text-decoration: none;
-  color: black;
+.item::after {
+  bottom: 0;
+  transform-origin: right;
+}
+.item::before {
+  top: 0;
+  transform-origin: left;
+}
+.item:hover::after,
+.item:hover::before {
+  transform: scaleX(1);
+}
+.item:hover {
+  color: rgb(0, 0, 0);
+}
+.item:active {
+  color: #f11f1f;
 }
