--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 15px 0 15px 0;
   padding: 0;
 }
 .header {
@@ -28,16 +28,19 @@ body {
   width: 100vw;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 .static {
   font-size: 60px;
   font-weight: 900;
+  text-align: center;
 }
 .dynamic {
   margin-left: 20px;
   color: #f11f1f;
   font-size: 60px;
   font-weight: 900;
+  text-align: center;
 }
 .item {
   font-size: 30px;
@@ -49,6 +52,7 @@ body {
   height: 100vh;
 }
 .photo {
+  width: fit-content;
   background-color: #f11f1f60;
   border-radius: 45% 55% 70% 30% / 34% 34% 66% 66%;
 }
@@ -58,6 +62,14 @@ body {
   height: 90vh;
   justify-content: space-around;
   align-items: center;
+}
+@media only screen and (max-width: 900px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+  .log {
+    display: none;
+  }
 }
 .box {
   max-width: 550px;
@@ -107,6 +119,7 @@ body {
 .imgP {
   height: 30vh;
 
+  width: 25vw;
   border-radius: 30px;
   cursor: pointer;
 }
@@ -116,15 +129,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 5vh;
   flex-wrap: wrap;
-  background-color: rgb(235, 228, 228);
 }
 .proj {
+  margin: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-right: 2vh;
+  border-radius: 30px;
+  background-color: #fff8fa;
 }
 
 a,
@@ -171,4 +187,42 @@ li {
 }
 .item:active {
   color: #f11f1f;
+}
+.button {
+  background-color: transparent;
+  border: 2px solid #ec696b;
+  border-radius: 12px;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  font-size: 1rem;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  font-weight: 700;
+  color: #ec696b;
+  background-image: linear-gradient(45deg, #ec696b 50%, transparent 50%);
+  background-position: 100%;
+  background-size: 400%;
+  transition: all 0.7s ease-in-out;
+}
+.button:hover {
+  background-position: 0;
+  color: white;
+}
+.row {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+.girl {
+  max-height: 70vh;
+  max-width: 100%;
+}
+.about {
+  margin-top: 10vh;
+  display: block;
+  font-size: 23px;
+  text-align: center;
+  font-weight: 900;
 }
